--- a/template.html
+++ b/template.html
@@ -21,6 +21,9 @@
 </main>
 <footer>
 	&copy;2020 &bull; Meagan Roberts &bull; BYU-Idaho &bull; CIT 160
-</footer>  
+</footer> 
+<script>
+  
+</script> 
 </body>
 </html>
