--- a/program4-1.html
+++ b/program4-1.html
@@ -17,13 +17,11 @@
   <label>Enter Number Two: <input type="text" id="number2"></label>
 	<label><button onclick="addNumbers()">Add Numbers</button></label>
 	<hr>
-	<p id="output"></p>
+	<p id="sum"></p>
 </main>
 <footer>
 	&copy;2020 &bull; Meagan Roberts &bull; BYU-Idaho &bull; CIT 160
 </footer> 
-<script>
-  
-</script>
+<script src="js/program4-1.js" defer></script> <!--external-->
 </body>
 </html>
