--- a/program4-1.html
+++ b/program4-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>160m Template - Meagan Roberts</title>
-    <link rel="stylesheet" href="CSS/style.css"> <!--external-->
+    <link rel="stylesheet" href="CSS/styles.css"> <!--external-->
 </head>
 <body>
   <header>
