--- a/program5-1.html
+++ b/program5-1.html
@@ -8,20 +8,19 @@
 </head>
 <body>
   <header>
-      <h1>Week 4: Add 2 Numbers Template</h1>
+      <h1>Week 5: Convert Pounds to Kilograms</h1>
       <h2>Meagan Roberts</h2>
   </header>
   <main>
-	<h3>Add Two Numbers</h3>
-	<label>Enter Number One: <input type="text" id="number1"></label>
-  <label>Enter Number Two: <input type="text" id="number2"></label>
-	<label><button onclick="addNumbers()">Add Numbers</button></label>
+	<h3>Pounds to Kilograms</h3>
+	<label>Enter number of pounds: <input type="text" id="pounds"></label>
+	<label><button onclick="poundsToKilograms()">Convert</button></label>
 	<hr>
-	<p id="sum"></p>
+	<p id="output"></p>
 </main>
 <footer>
 	&copy;2020 &bull; Meagan Roberts &bull; BYU-Idaho &bull; CIT 160
 </footer> 
-<script src="js/program4-1.js" defer></script> <!--external-->
+<script src="js/program5-1.js" defer></script>
 </body>
 </html>
