--- a/footwear.html
+++ b/footwear.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <h1>Week 6: Weather Shoes</h1>
+      <h1>Week 6: Foot Wear</h1>
       <h2>Meagan Roberts</h2>
   </header>
   <main>
