--- a/sumOdds.html
+++ b/sumOdds.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <h1>Week 8: Sum Odds</h1>
+      <h1>Week 8: Sum of Odds</h1>
       <h2>Meagan Roberts</h2>
   </header>
   <main>
@@ -21,15 +21,7 @@
 <footer>
 	&copy;2020 &bull; Meagan Roberts &bull; BYU-Idaho &bull; CIT 160
 </footer> 
-<script>
-  function sumOdds() {
-    //input
-    let n = parseFloat(document.getElementById("n").value)
-
-    //processing
-    
-    //output
-  }
+<script src="js/sumOdds.js">
 </script>
 </body>
 </html>
