--- a/windChill.html
+++ b/windChill.html
@@ -25,7 +25,7 @@
   function doInputOutput() {
     //get value of temp and speed
     let temperature = parseFloat(document.getElementById("tempF").value);
-    let windspeed = parseFloat(document.getElementById(speed).value);
+    let windspeed = parseFloat(document.getElementById("speed").value);
     //call windChill function and store in windchill var
     windchill = windChill(tempF, speed);
     //output windchill
