--- a/array2.html
+++ b/array2.html
@@ -48,7 +48,13 @@ function test() {
 }
 
 function countEvens(list) {
-
+  let x = 0;
+  for (let i = 0; i < list.length; i++) {
+    let a = list[i];
+    if (a % 2 == 0) {
+      x += 1;
+    }
+  }
 }
 
 function multiply(list, multiplier) {
