--- a/array1.html
+++ b/array1.html
@@ -12,7 +12,7 @@
       <h2>Meagan Roberts</h2>
   </header>
   <main>
-	<label><button onclick="test()">Add Numbers</button></label>
+	<label><button onclick="test()">Click Me</button></label>
 	<p id="output"></p>
 </main>
 <footer>
