--- a/array2.html
+++ b/array2.html
@@ -50,8 +50,7 @@ function test() {
 function countEvens(list) {
   let x = 0;
   for (let i = 0; i < list.length; i++) {
-    let a = list[i];
-    if (a % 2 == 0) {
+    if (list[i] % 2 == 0) {
       x += 1;
     }
   }
