--- a/array2.html
+++ b/array2.html
@@ -33,8 +33,8 @@ function test() {
     let count2 = countEvens(list2);
 
     // Test the multiply function by calling it two times.
-    let mult1 = multiply(list1);
-    let mult2 = multiply(list2);
+    let mult1 = multiply(list1, 3);
+    let mult2 = multiply(list2, 4);
 
     // Build a string to display to the user.
     let output =
