--- a/array2.html
+++ b/array2.html
@@ -57,7 +57,11 @@ function countEvens(list) {
 return x;
 }
 
-function multiply(list, multiplier) {
+function multiply(list, multiplier) { 
+  for (let i = 0; i < list.length; i++) {
+    a = list[i] * multiplier;
+  }
+  return a;
 }
 </script>
 </body>
