--- a/array2.html
+++ b/array2.html
@@ -59,10 +59,12 @@ return x;
 
 function multiply(list, multiplier) { 
   for (let i = 0; i < list.length; i++) {
-    a = list[i] * multiplier;
-  }
-  return a;
+  return list[i] * multiplier;
 }
+
 </script>
 </body>
 </html>
+
+
+  let a = list.map(multiply,);
