--- a/array2.html
+++ b/array2.html
@@ -13,7 +13,7 @@
   </header>
   <main>
 	<label><button onclick="test()">Click Me</button></label>
-	<p id="output"></p>
+	<div id="output"></div>
 </main>
 <footer>
 	&copy;2020 &bull; Meagan Roberts &bull; BYU-Idaho &bull; CIT 160
@@ -31,11 +31,9 @@ function test() {
     // Test the countEvens function by calling it two times.
     let count1 = countEvens(list1);
     let count2 = countEvens(list2);
-
     // Test the multiply function by calling it two times.
     let mult1 = multiply(list1, 3);
     let mult2 = multiply(list2, 4);
-
     // Build a string to display to the user.
     let output =
             count1 + '<br>' +
